--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -33,17 +33,15 @@ nav#menu
   .section.bordered.overlayed.centered#section2 data-anchor="firstPage"
     .content
       .container
-        h1 The Vision
-        p To be one of New York’s premier holistic integrated orchard-based cideries
+        h1 Our Vision
+        p To be one of the Northeast’s premier orchard-based cideries.
 
   / Slide 3
   .section.bordered.centered.overlayed#section3 data-anchor="secondPage"
-    .mobile-overlay
     .content
       .container
-        .text-block
-          h1 The Mission
-          p Seminary Hill Cider aims to connect connect place, process and craft with the consumer- bringing the hyper-local experience together, to be enjoyed throughout the seasons, connecting stunning landscape, human endeavor, and enjoyment  through a glass.
+        h1 Our Mission
+        p Callicoon Cider aims to craft superlative cider and perry from fruit grown holistically in our own orchard. The green design of our production facility, tasting room, and event space extend our commitment to the ecosystem of this planet and this place. Located on a hillside overlooking Callicoon, the cider house offers stunning views of the orchard, the Delaware River, and a former seminary nestled at the bottom of the hill.
 
   / Slide 4
   .section.bordered#section4 data-anchor="3rdPage"
@@ -51,7 +49,7 @@ nav#menu
       .container
         h1 Our Story
         =image_tag('upd/4-2a.jpg', class:'border')
-        p.text-block Seminary Hill Cider aims to connect connect place, process and craft with the consumer- bringing the hyper-local experience together, to be enjoyed throughout the seasons, connecting stunning landscape, human endeavor, and enjoyment  through a glass. Seminary Hill Cider aims to connect connect place, process and craft with the consumer- bringing the hyper-local experience together, to be enjoyed throughout the seasons, connecting stunning landscape, human endeavor, and enjoyment  through a glass.    
+        p.text-block The owner has roots in Callicoon that go back more than five generations. During Prohibition in the 1920s one great-grandfather distilled “apple jack” in a shed on the property—until the day he fell asleep during brewing and the shed burned down. Now we are reviving and updating the orchard-to-bottle process to create distinctive blends from diverse, holistically grown apple and pear varietals. Visitors are invited to sample the cider and perry created sustainably from the land that has nurtured the owner’s family for more than five generations.
     .slide#slide2
       .container
         h1 Our Cidery
